services/media/jellyfin/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
