services/media/jellyfin/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # Library scans after downloads
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: sonarr
              app.kubernetes.io/name: sonarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: seerr
              app.kubernetes.io/name: seerr
        # Requests from ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
              app.kubernetes.io/instance: traefik
        # LAN clients through LoadBalancer service, which preserves client IP
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: http

  egress:
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: coredns
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Allow egress to internet but not in cluster
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 172.16.0.0/12
      ports:
        - protocol: TCP
          port: 443
